--- a/ClearArchitecture/Application/Storyboard/Base.lproj/Main.storyboard
+++ b/ClearArchitecture/Application/Storyboard/Base.lproj/Main.storyboard
@@ -15,13 +15,31 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JMb-on-obt" customClass="LoadMoreTableView" customModule="ClearArchitecture" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="xZv-VM-hKe"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="JMb-on-obt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BwC-Ep-MhK"/>
+                            <constraint firstItem="JMb-on-obt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="EWd-9y-M4q"/>
+                            <constraint firstAttribute="bottom" secondItem="JMb-on-obt" secondAttribute="bottom" id="jfO-JQ-aUt"/>
+                            <constraint firstItem="JMb-on-obt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tYU-XV-E53"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="repositoryTableView" destination="JMb-on-obt" id="v7a-Vx-coY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
